<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nc.natecast.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="numberDecimal"
            android:digits="1234567890."/>

        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="text"
            tools:ignore="TextFields" />

        <ToggleButton
            android:id="@+id/toggleButtonFullScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/full_screen_off"
            android:textOn="@string/full_screen_on"
            android:checked="true"/>

        <Button
            android:id="@+id/buttonLaunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch"/>

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"/>

        <Button
            android:id="@+id/buttonSpace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space"/>

        <Button
            android:id="@+id/buttonUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/left"/>

            <Button
                android:id="@+id/buttonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/down"/>

    </LinearLayout>

</ScrollView>
